--- a/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
@@ -263,13 +263,24 @@
 {% block modalUpdateFooter %}
     <div class="pull-left">
         {%- if task.status != 'completed' -%}
-            <button id="ajax-modal-submit" class="btn btn-sm btn-primary">{{ 'task.update.submit'|trans }}</button>
+            <button id="ajax-modal-submit" class="btn btn-sm btn-primary btn-task-update">{{ 'task.update.submit'|trans }}</button>
         {%- endif -%}
         {% if task.isRequester(app.user) or is_granted('ROLE_TASK_MANAGER')  %}
             <button type="button" id="btn-task-delete"
                     data-url="{{ path('ems_core_task_ajax_delete', {'revisionId': revisionId, 'taskId': task.id}) }}"
-                    class="btn btn-sm btn-danger">{{ 'task.delete.submit'|trans }}</button>
+                    class="btn btn-sm btn-danger btn-task-delete">{{ 'task.delete.submit'|trans }}</button>
         {% endif %}
+        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+    </div>
+{% endblock %}
+
+{% block modalDeleteBody %}
+    {{ form(form) }}
+{% endblock %}
+
+{% block modalDeleteFooter %}
+    <div class="pull-left">
+        <button id="ajax-modal-submit" class="btn btn-sm btn-danger btn-task-delete">{{ 'task.delete.submit'|trans }}</button>
         <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
 {% endblock %}
